--- a/client/src/app/categories-page/categories-form/positions-form/positions-form.component.html
+++ b/client/src/app/categories-page/categories-form/positions-form/positions-form.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col s12">
     <div class="page-subtitle">
-      <h4>Позиции:</h4>
+      <h4>Елемент:</h4>
       <button
         class="waves-effect waves-light btn grey darken-1 btn-small"
         (click)="onAddPosition()"
       >
-        Добавить позицию
+        Добавить елемент
       </button>
     </div>
 
@@ -26,7 +26,7 @@
         </a>
       </div>
       <ng-template #empty>
-        <div class="center">В категории позиций нет</div>
+        <div class="center">В категории елементов нет</div>
       </ng-template>
     </div>
     <ng-template #loader>
@@ -41,7 +41,7 @@
 >
 <div class="modal" #modal>
   <div class="modal-content">
-    <h4 class="mb1">Добавить позицию</h4>
+    <h4 class="mb1">Добавить елемент</h4>
     <div class="input-field">
       <input
         formControlName="name"
